update in my portfolio

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
             <div class="container px-4 px-lg-5 text-center">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-10">
-                        <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h2>
+                        <h2>A self-taught front-end web developer with a strong eye for innovative design and a keen understanding of techniques geared toward optimum user experience, and an experienced front-end web developer that is responsible for implementing visual elements that users see and interact within a web application.</h2>
                         <p class="lead mb-5">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                            <a href="https://unsplash.com/">Unsplash</a>
+                            See more of my works here,
+                            <a href="www.behance.net/jessicargomez">Portfolio</a>
                             !
                         </p>
                         <a class="btn btn-dark btn-xl" href="#services">What We Offer</a>
